[tool.poetry]
name = "vpnmmon"
version = "0.3.4"
description = ""
authors = ["Анатолий Никифоров <nikiforova693@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
vpnmauth = {git = "https://github.com/anatolio-deb/vpnmauth.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
isort = "^5.10.1"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
